--- a/package.json
+++ b/package.json
@@ -5,8 +5,19 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package-linux": "electron-packager . BeatBucket --overwrite --platform=linux --arch=x64 --icon=assets/img/beatbucket.png --prune=true --out=release-builds",
-    "package-windows": "electron-packager . BeatBucket --overwrite --platform=win32 --arch=x64 --icon=assets/img/beatbucket.png --prune=true --out=release-builds"
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
+  },
+  "build": {
+    "productName": "Beat Bucket",
+    "icon": "assets/img/beat_bucket.png",
+    "fileAssociations": [
+      {
+        "ext": "mp3",
+        "name": "MP3 Files",
+        "role": "Editor"        
+      }
+    ]
   },
   "author": "Rodrigo Silva",
   "license": "MIT",
@@ -18,7 +29,8 @@
     "angular-messages": "^1.7.8",
     "angular-route": "^1.7.8",
     "angular-uuid": "0.0.4",
-    "electron": "^5.0.6",
+    "electron": "^5.0.13",
+    "electron-builder": "^22.7.0",
     "electron-is-dev": "^1.1.0",
     "howler": "^2.1.2",
     "sass": "^1.22.7"
