--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist-win": "electron-builder --win",
-    "dist-linux": "electron-builder --linux"
+    "dist-win": "electron-builder --win"    
   },
   "build": {
     "productName": "BeatBucket",
