--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "beatbucket",
   "version": "1.0.0",
   "description": "BeatBucket",
-  "main": "main.js",  
+  "main": "main.js",
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist-win": "electron-builder --win"    
+    "dist-win": "electron-builder --win"
   },
   "build": {
     "productName": "BeatBucket",
-    "icon": "assets/img/beat_bucket.ico",    
+    "icon": "assets/img/beat_bucket.ico",
     "fileAssociations": [
       {
         "ext": "mp3",
@@ -19,7 +19,7 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "assets/img/beat_bucket.ico"      
+      "icon": "assets/img/beat_bucket.ico"
     },
     "nsis": {
       "oneClick": false,
@@ -43,19 +43,6 @@
     "electron-builder": "^22.7.0",
     "electron-is-dev": "^1.1.0",
     "howler": "^2.1.2",
-    "sass": "^1.22.7",
-    "winreg": "^1.2.4"
-  },
-  "dependencies": {
-    "angular": "^1.7.8",
-    "angular-animate": "^1.7.8",
-    "angular-aria": "^1.7.8",
-    "angular-material": "^1.1.19",
-    "angular-messages": "^1.7.8",
-    "angular-route": "^1.7.8",
-    "angular-uuid": "0.0.4",
-    "electron-is-dev": "^1.1.0",
-    "howler": "^2.1.2",
-    "winreg": "^1.2.4"
+    "sass": "^1.22.7"
   }
 }
