--- a/package.json
+++ b/package.json
@@ -44,5 +44,16 @@
     "electron-is-dev": "^1.1.0",
     "howler": "^2.1.2",
     "sass": "^1.22.7"
-  }
+  },
+  "dependencies": {
+    "angular": "^1.7.8",
+    "angular-animate": "^1.7.8",
+    "angular-aria": "^1.7.8",
+    "angular-material": "^1.1.19",
+    "angular-messages": "^1.7.8",
+    "angular-route": "^1.7.8",
+    "angular-uuid": "0.0.4",
+    "electron-is-dev": "^1.1.0",
+    "howler": "^2.1.2"    
+   }
 }
